--- a/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
@@ -41,10 +41,11 @@
             return;
         }
     }
+
 </script>
 
 <h2><span> Tenant Website</span></h2>
-@Html.Hidden("TenantDepartment", true)
+@Html.Hidden("tenantWebsite", true)
 
 @using (Html.BeginForm())
 {
@@ -187,7 +188,7 @@
         </div>
         <div class="input-group h-100 justify-content-center align-items-center">
             <div class="col-md-offset-2 col-md-10 bottom-right">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
                 <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
             </div>
         </div>
